network-policies/egress-postgres.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: egress-postgres
spec:
  endpointSelector:
    matchLabels:
      network-policy/egress-postgres: "true"
  egress:
    - toEndpoints:
        - matchLabels:
            network-policy/ingress-postgres: "true"
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: Exists
      toPorts:
        - ports:
            - port: "5432"
