network-policies/ingress-nginx-port-5090.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ingess-nginx-port-5090
spec:
  endpointSelector:
    matchLabels:
      network-policy/ingess-nginx-port-5090: "true"
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: ingress-nginx
      toPorts:
        - ports:
            - port: "5090"
