network-policies/ingress-nginx.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ingess-nginx
spec:
  endpointSelector:
    matchLabels:
      network-policy/ingess-nginx: "true"
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: ingress-nginx
